fix: fixed font size on small screens

--- a/style/style.css
+++ b/style/style.css
@@ -87,3 +87,17 @@ button:active {
         margin: 2vh 0vw 0vh 0vw;
     }
 }
+
+@media(max-width: 768px) {
+
+    .header-text {
+        font-size: 4rem;
+    }
+}
+
+@media(max-width: 425px) {
+
+    .header-text {
+        font-size: 3.2rem;
+    }
+}
